--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@ An idea about what are all the training activities &amp; study materials in NCC
 					<img border="0" alt="material" src="material.png" width="450px" height="250px">
 					</a>
 				</p>
-				<p style="color: white; font-size: 30px; font-style: italic; background-color: navy;">
+				<p style="color: white; font-size: 30px; font-style: italic; background-color: maroon;">
 				Navigate to the official home page of NCC >>>
-				<button id="button2"><a href="https://indiancc.nic.in/">NCC Home page</a></button></p>
+				<a href="https://indiancc.nic.in/">NCC Home page</a></p>
 	<footer style="color: white; text-align: left; background-color: black; font-size: 25px; font-style: italic;">
     	<p>
     		Developer details<br>
