--- a/index.html
+++ b/index.html
@@ -56,42 +56,42 @@ An idea about what are all the training activities &amp; study materials in NCC
 </head>
 <body>
 	<div id="bg">
-			<section class="col-lg-12 col-md-12"><h1 style="background-color: navy; color: white; font-style: italic; font-size: 50px; text-align: center;">1 (Karnataka) Air Sqn NCC</h1>
+			<section style="padding: 5px"><h1 style="background-color: navy; color: white; font-style: italic; font-size: 50px; text-align: center;">1 (Karnataka) Air Sqn NCC</h1>
 				<h2 style="background-color: red; color: white; font-style: italic; font-size: 40px; text-align: center;">Training & Activities
 				</h2>
 			</section>
-			<nav style="color: navy; font-style: italic; font-size: 28px; text-align: right;">
+			<nav style="color: navy; font-style: italic; font-size: 28px; text-align: right; margin: 5px">
 				Location : Jakkur Aerodrome, Bengaluru
 			</nav>
 			<p align="center"><img src="wallpaper.png" height="500px" width="450px"></p>
-			<p style="color: white; font-size: 30px; font-style: italic; background-color: black; opacity: 0.7;">
+			<p style="color: white; font-size: 30px; font-style: italic; background-color: black; opacity: 0.7; margin: 5px">
 				1 (Karnataka) Air Squadron NCC is a premier NCC Air Squadron of India and operates from Jakkur Aerodrome.
 				This Unit imparts flying and institutional training to Air Wing Cadets of the NCC.
 			</p>
-				<p style="font-style: italic; font-size: 25px; italic;background-color: black; color: white; opacity: 0.7">Camps & Training (Click on the Image)</p>
+				<p style="font-style: italic; font-size: 25px; italic;background-color: black; color: white; opacity: 0.7; margin: 5px">Camps & Training (Click on the Image)</p>
 				<p>
 					<a href="https://indiancc.nic.in/training-activities/">
 					<img border="0" alt="Camp" src="camp.png" width="400px" height="250px">
 					</a>
 				</p>
-				<p style="color: white; font-size: 30px; font-style: italic; background-color: black; opacity: 0.7">
+				<p style="color: white; font-size: 30px; font-style: italic; background-color: black; opacity: 0.7; margin: 5px">
 				Indian Air Force - How to apply & career prospects (Click on the image for details)</p>
 				<p>
 					<a href="career.pdf">
 					<img border="0" alt="career" src="career.png" width="450px" height="250px">
 					</a>
 				</p>
-				<p style="color: white; font-size: 30px; font-style: italic; background-color: black; opacity: 0.7">
+				<p style="color: white; font-size: 30px; font-style: italic; background-color: black; opacity: 0.7; margin: 5px">
 				Click on the image for study materials</p>
 				<p>
 					<a href="https://drive.google.com/drive/folders/1cTqceXD6SwNgNsgLVMJ0Se9NqTOsTBzt">
 					<img border="0" alt="material" src="material.png" width="450px" height="250px">
 					</a>
 				</p>
-				<p style="color: black; font-size: 30px; font-style: italic; background-color: white;">
+				<p style="color: black; font-size: 30px; font-style: italic; background-color: white; margin: 5px">
 				Navigate to the official home page of NCC >>>
 				<a href="https://indiancc.nic.in/">NCC Home page</a></p>
-	<footer style="color: white; text-align: left; background-color: black; font-size: 25px; font-style: italic;">
+	<footer style="color: white; text-align: left; background-color: black; font-size: 25px; font-style: italic; margin: 5px">
     	<p>
     		Developer details<br>
     		Name&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:&nbsp;Cdt/Sgt MPV Saratchandra<br>
