--- a/index.html
+++ b/index.html
@@ -51,7 +51,10 @@ An idea about what are all the training activities &amp; study materials in NCC
   				font-size: 40px;
   				margin: 4px 2px;
   				cursor: pointer;
-				}	
+		}
+		p{
+			padding: 5px;
+		}	
 	</style>
 </head>
 <body>
@@ -60,7 +63,7 @@ An idea about what are all the training activities &amp; study materials in NCC
 				<h2 style="background-color: red; color: white; font-style: italic; font-size: 40px; text-align: center;">Training & Activities
 				</h2>
 			</section>
-			<nav style="color: navy; font-style: italic; font-size: 28px; text-align: right; margin: 5px">
+			<nav style="color: navy; font-style: italic; font-size: 28px; text-align: right; padding: 5px">
 				Location : Jakkur Aerodrome, Bengaluru
 			</nav>
 			<p align="center"><img src="wallpaper.png" height="500px" width="450px"></p>
@@ -68,6 +71,8 @@ An idea about what are all the training activities &amp; study materials in NCC
 				1 (Karnataka) Air Squadron NCC is a premier NCC Air Squadron of India and operates from Jakkur Aerodrome.
 				This Unit imparts flying and institutional training to Air Wing Cadets of the NCC.
 			</p>
+			<p style="color: white; font-size: 30px; font-style: italic; background-color: black; opacity: 0.7; margin: 5px;">
+				Activities</p>
 				<p style="font-style: italic; font-size: 25px; italic;background-color: black; color: white; opacity: 0.7; margin: 5px">Camps & Training (Click on the Image)</p>
 				<p>
 					<a href="https://indiancc.nic.in/training-activities/">
@@ -93,6 +98,7 @@ An idea about what are all the training activities &amp; study materials in NCC
 				<a href="https://indiancc.nic.in/">NCC Home page</a></p>
 	<footer style="color: white; text-align: left; background-color: black; font-size: 25px; font-style: italic; margin: 5px">
     	<p>
+    		Contact &nbsp;:&nbsp; 
     		Developer details<br>
     		Name&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:&nbsp;Cdt/Sgt MPV Saratchandra<br>
  			Regt.No&nbsp;&nbsp;&nbsp;&nbsp;:&nbsp;KA/18/SDF/100360<br>
