--- a/index.html
+++ b/index.html
@@ -98,11 +98,10 @@ An idea about what are all the training activities &amp; study materials in NCC
 				<a href="https://indiancc.nic.in/">NCC Home page</a></p>
 	<footer style="color: white; text-align: left; background-color: black; font-size: 25px; font-style: italic; margin: 5px">
     	<p>
-    		Contact &nbsp;:&nbsp; 
-    		Developer details<br>
-    		Name&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:&nbsp;Cdt/Sgt MPV Saratchandra<br>
- 			Regt.No&nbsp;&nbsp;&nbsp;&nbsp;:&nbsp;KA/18/SDF/100360<br>
-    		Squadron :&nbsp;1 (Karnataka) Air Squadron NCC</p>
+    		Contact &nbsp;:&nbsp;nccairwing@christuniversity.in 
+    		Developer<br>
+    		Name&nbsp;:Cdt/Sgt MPV Saratchandra<br>
+ 			
     </footer>
     </div>
 </body>
