--- a/index.html
+++ b/index.html
@@ -98,9 +98,8 @@ An idea about what are all the training activities &amp; study materials in NCC
 				<a href="https://indiancc.nic.in/">NCC Home page</a></p>
 	<footer style="color: white; text-align: left; background-color: black; font-size: 25px; font-style: italic; margin: 5px">
     	<p>
-    		Contact &nbsp;:&nbsp;nccairwing@christuniversity.in 
-    		Developer<br>
-    		Name&nbsp;:Cdt/Sgt MPV Saratchandra<br>
+    		Contact &nbsp;:&nbsp;nccairwing@christuniversity.in<br><br> 
+    		Web development by Saratchandra
  			
     </footer>
     </div>
