--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ An idea about what are all the training activities &amp; study materials in NCC
 				<p style="color: white; font-size: 30px; font-style: italic; background-color: black; opacity: 0.7; margin: 5px">
 				Indian Air Force - How to apply & career prospects (Click on the image for details)</p>
 				<p>
-					<a href="career.pdf">
+					<a href="Career_IAF.pdf">
 					<img border="0" alt="career" src="career.png" width="450px" height="250px">
 					</a>
 				</p>
