--- a/index.html
+++ b/index.html
@@ -87,10 +87,17 @@ An idea about what are all the training activities &amp; study materials in NCC
 					</a>
 				</p>
 				<p style="color: white; font-size: 30px; font-style: italic; background-color: black; opacity: 0.7; margin: 5px">
-				Click on the image for study materials</p>
+				Click on the image for NCC study materials</p>
 				<p>
 					<a href="https://drive.google.com/drive/folders/1cTqceXD6SwNgNsgLVMJ0Se9NqTOsTBzt">
 					<img border="0" alt="material" src="material.png" width="450px" height="250px">
+					</a>
+				</p>
+				<p style="color: white; font-size: 30px; font-style: italic; background-color: black; opacity: 0.7; margin: 5px">
+				Click on the image for AFCAT, SSB & CDS study materials</p>
+				<p>
+					<a href="https://drive.google.com/drive/u/0/folders/1yNbTh3PTZqJEJUCtwPbGlIC3238uhOs8">
+					<img border="0" alt="material" src="mat.png" width="450px" height="250px">
 					</a>
 				</p>
 				<p style="color: black; font-size: 30px; font-style: italic; background-color: white; margin: 5px">
