Contact info modified

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ An idea about what are all the training activities &amp; study materials in NCC
 				<a href="https://indiancc.nic.in/">NCC Home page</a></p>
 	<footer style="color: white; text-align: left; background-color: black; font-size: 25px; font-style: italic; margin: 5px">
     	<p>
-    		Contact &nbsp;:&nbsp;nccairwing@christuniversity.in<br><br> 
+    		Contact &nbsp;:&nbsp;bannumppatnaik@gmail.com<br><br> 
     		Web development by Saratchandra
  			
     </footer>
